python file processing completed

--- a/param_extractor.ipynb
+++ b/param_extractor.ipynb
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 96,
    "id": "c417906c",
    "metadata": {},
    "outputs": [
@@ -520,22 +520,224 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Line found: glafic.set_lens(1, 'sie', 0.261343256161012, 1.30e+02, 20.81, 20.76, 0.109, 23.18, 0.0, 0.0)\n"
+      "Line found: glafic.set_lens(1, 'sie', 0.261343256161012, 1.30e+02, 20.81, 20.76, 0.109, 23.18, 0.0, 0.0)\n",
+      "Line found: glafic.set_lens(2, 'pert', 0.261343256161012, 1.0, 20.89, 20.64, 0.1, 140.0, 0.0, 0.3)\n",
+      "Extracted parameters: [['1', \"'sie'\", '0.261343256161012', '1.30e+02', '20.81', '20.76', '0.109', '23.18', '0.0', '0.0'], ['2', \"'pert'\", '0.261343256161012', '1.0', '20.89', '20.64', '0.1', '140.0', '0.0', '0.3']]\n",
+      "Set lens parameters: {'sie': [0.261343256161012, 130.0, 20.81, 20.76, 0.109, 23.18, 0.0, 0.0], 'pert': [0.261343256161012, 1.0, 20.89, 20.64, 0.1, 140.0, 0.0, 0.3]}\n",
+      "Set lens parameters after removing first parameter: {'sie': [130.0, 20.81, 20.76, 0.109, 23.18, 0.0, 0.0], 'pert': [1.0, 20.89, 20.64, 0.1, 140.0, 0.0, 0.3]}\n"
      ]
     }
    ],
    "source": [
     "# Extracting the input parameters from the Python file\n",
     "\n",
-    "# Find the line that starts with 'glafic.set_lens('\n",
-    "set_lens_line = None\n",
-    "for line in py:\n",
-    "    if line.startswith('glafic.set_lens('):\n",
-    "        set_lens_line = line\n",
-    "        break\n",
-    "if set_lens_line is None:\n",
-    "    raise ValueError(\"No line starting with 'glafic.set_lens(' found in the file.\")\n",
-    "print(f\"Line found: {set_lens_line.strip()}\")"
+    "# Find all lines that start with 'glafic.set_lens('\n",
+    "set_lens_lines = [line for line in py if line.startswith('glafic.set_lens(')]\n",
+    "if not set_lens_lines:\n",
+    "    raise ValueError(\"No lines starting with 'glafic.set_lens(' found in the file.\")\n",
+    "for l in set_lens_lines:\n",
+    "    print(f\"Line found: {l.strip()}\")\n",
+    "\n",
+    "# Separate out everything in the parentheses\n",
+    "set_lens_params = []\n",
+    "for line in set_lens_lines:\n",
+    "    # Extract the part inside the parentheses\n",
+    "    match = re.search(r'set_lens\\((.*?)\\)', line)\n",
+    "    if match:\n",
+    "        params_str = match.group(1)\n",
+    "        # Split by commas and strip whitespace\n",
+    "        params = [param.strip() for param in params_str.split(',')]\n",
+    "        set_lens_params.append(params)\n",
+    "    else:\n",
+    "        raise ValueError(f\"No valid parameters found in line: {line.strip()}\")\n",
+    "print(f\"Extracted parameters: {set_lens_params}\")\n",
+    "\n",
+    "# Store the parameters in a dictionary\n",
+    "set_lens_dict = {}\n",
+    "for params in set_lens_params:\n",
+    "    if len(params) < 3:\n",
+    "        raise ValueError(f\"Not enough parameters found in line: {params}\")\n",
+    "    lens_name = params[1].strip(\"'\\\"\")  # Remove quotes from lens name\n",
+    "    lens_params = [float(x) for x in params[2:]]  # Skip index and lens name\n",
+    "    set_lens_dict[lens_name] = lens_params\n",
+    "print(f\"Set lens parameters: {set_lens_dict}\")\n",
+    "\n",
+    "# Remove the first lens parameter\n",
+    "if set_lens_dict:\n",
+    "    for lens_name, params in set_lens_dict.items():\n",
+    "        set_lens_dict[lens_name] = params[1:]  # Remove the first parameter (index)\n",
+    "print(f\"Set lens parameters after removing first parameter: {set_lens_dict}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b40ba3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Lens Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "param1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param3",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param4",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param5",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param6",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param7",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "c1b54e4b-0a96-4aeb-a2f2-c03a3e67722c",
+       "rows": [
+        [
+         "0",
+         "sie",
+         "130.0",
+         "20.81",
+         "20.76",
+         "0.109",
+         "23.18",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "1",
+         "pert",
+         "1.0",
+         "20.89",
+         "20.64",
+         "0.1",
+         "140.0",
+         "0.0",
+         "0.3"
+        ]
+       ],
+       "shape": {
+        "columns": 8,
+        "rows": 2
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lens Name</th>\n",
+       "      <th>param1</th>\n",
+       "      <th>param2</th>\n",
+       "      <th>param3</th>\n",
+       "      <th>param4</th>\n",
+       "      <th>param5</th>\n",
+       "      <th>param6</th>\n",
+       "      <th>param7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sie</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>20.81</td>\n",
+       "      <td>20.76</td>\n",
+       "      <td>0.109</td>\n",
+       "      <td>23.18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pert</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.89</td>\n",
+       "      <td>20.64</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>140.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Lens Name  param1  param2  param3  param4  param5  param6  param7\n",
+       "0       sie   130.0   20.81   20.76   0.109   23.18     0.0     0.0\n",
+       "1      pert     1.0   20.89   20.64   0.100  140.00     0.0     0.3"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use generic column names: param1, param2, ...\n",
+    "df_input = pd.DataFrame()\n",
+    "rows_input = []\n",
+    "max_param_len_input = 0\n",
+    "for lens_name, params in set_lens_dict.items():\n",
+    "    row = {'Lens Name': lens_name}\n",
+    "    for i, val in enumerate(params):\n",
+    "        row[f'param{i+1}'] = val\n",
+    "    rows_input.append(row)\n",
+    "    if len(params) > max_param_len_input:\n",
+    "        max_param_len_input = len(params)\n",
+    "columns_input = ['Lens Name'] + [f'param{i+1}' for i in range(max_param_len_input)]\n",
+    "df_input = pd.DataFrame(rows_input, columns=columns_input)\n",
+    "df_input\n"
    ]
   }
  ],
