--- a/param_extractor.ipynb
+++ b/param_extractor.ipynb
@@ -739,6 +739,246 @@
     "df_input = pd.DataFrame(rows_input, columns=columns_input)\n",
     "df_input\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "b5050f6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line found: glafic.setopt_lens(1, 0, 1, 1, 1, 1, 1, 0, 0)\n",
+      "Line found: glafic.setopt_lens(2, 0, 0, 1, 1, 1, 1, 0, 1)\n",
+      "Extracted parameters: [['1', '0', '1', '1', '1', '1', '1', '0', '0'], ['2', '0', '0', '1', '1', '1', '1', '0', '1']]\n",
+      "Set flag parameters: {'sie': '0,1,1,1,1,1,0,0', 'pert': '0,0,1,1,1,1,0,1'}\n",
+      "Set flag parameters after removing first parameter for sie: 1,1,1,1,1,0,0\n",
+      "Set flag parameters after removing first parameter for pert: 0,1,1,1,1,0,1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Lens Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "flag1",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "flag2",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "flag3",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "flag4",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "flag5",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "flag6",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "flag7",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "357ba74d-8ed5-470c-aecf-02323cb2dce2",
+       "rows": [
+        [
+         "0",
+         "sie",
+         "1",
+         "1",
+         "1",
+         "1",
+         "1",
+         "0",
+         "0"
+        ],
+        [
+         "1",
+         "pert",
+         "0",
+         "1",
+         "1",
+         "1",
+         "1",
+         "0",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 8,
+        "rows": 2
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lens Name</th>\n",
+       "      <th>flag1</th>\n",
+       "      <th>flag2</th>\n",
+       "      <th>flag3</th>\n",
+       "      <th>flag4</th>\n",
+       "      <th>flag5</th>\n",
+       "      <th>flag6</th>\n",
+       "      <th>flag7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sie</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pert</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Lens Name flag1 flag2 flag3 flag4 flag5 flag6 flag7\n",
+       "0       sie     1     1     1     1     1     0     0\n",
+       "1      pert     0     1     1     1     1     0     1"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract input flags from the Python file\n",
+    "\n",
+    "# Find all lines that start with 'glafic.set_flag('\n",
+    "set_flag_lines = [line for line in py if line.startswith('glafic.setopt_lens(')]\n",
+    "if not set_flag_lines:\n",
+    "    raise ValueError(\"No lines starting with 'glafic.setopt_lens(' found in the file.\")\n",
+    "for l in set_flag_lines:\n",
+    "    print(f\"Line found: {l.strip()}\")\n",
+    "\n",
+    "# Separate out everything in the parentheses\n",
+    "set_flag_params = []\n",
+    "for line in set_flag_lines:\n",
+    "    # Extract the part inside the parentheses\n",
+    "    match = re.search(r'setopt_lens\\((.*?)\\)', line)\n",
+    "    if match:\n",
+    "        params_str = match.group(1)\n",
+    "        # Split by commas and strip whitespace\n",
+    "        params = [param.strip() for param in params_str.split(',')]\n",
+    "        set_flag_params.append(params)\n",
+    "    else:\n",
+    "        raise ValueError(f\"No valid parameters found in line: {line.strip()}\")\n",
+    "print(f\"Extracted parameters: {set_flag_params}\")\n",
+    "\n",
+    "# Store the parameters in a dictionary\n",
+    "set_flag_dict = {}\n",
+    "for params in set_flag_params:\n",
+    "    if len(params) < 2:\n",
+    "        raise ValueError(f\"Not enough parameters found in line: {params}\")\n",
+    "    # The lens name is not present in setopt_lens, so use the lens index to map to set_lens_dict\n",
+    "    lens_index = params[0].strip(\"'\\\"\")\n",
+    "    # Find the lens name corresponding to this index from set_lens_params\n",
+    "    lens_name = None\n",
+    "    for lens_params in set_lens_params:\n",
+    "        if lens_params[0].strip(\"'\\\"\") == lens_index:\n",
+    "            lens_name = lens_params[1].strip(\"'\\\"\")\n",
+    "            break\n",
+    "    if lens_name is None:\n",
+    "        raise ValueError(f\"Lens name for index {lens_index} not found in set_lens_params\")\n",
+    "    flag = ','.join(params[1:])  # Join all flag values as a string\n",
+    "    set_flag_dict[lens_name] = flag\n",
+    "print(f\"Set flag parameters: {set_flag_dict}\")\n",
+    "\n",
+    "# Remove the first flag parameter\n",
+    "if set_flag_dict:\n",
+    "    for lens_name, flag in set_flag_dict.items():\n",
+    "        flag_parts = flag.split(',')\n",
+    "        set_flag_dict[lens_name] = ','.join(flag_parts[1:])  # Remove the first flag parameter\n",
+    "        print(f\"Set flag parameters after removing first parameter for {lens_name}: {set_flag_dict[lens_name]}\")\n",
+    "\n",
+    "# Dynamically create columns: 'Lens Name', 'flag1', 'flag2', ..., based on the maximum number of flags\n",
+    "df_flag = pd.DataFrame()\n",
+    "rows_flag = []\n",
+    "max_flag_len = 0\n",
+    "\n",
+    "# First, determine the maximum number of flags\n",
+    "for flag in set_flag_dict.values():\n",
+    "    flag_parts = flag.split(',')\n",
+    "    if len(flag_parts) > max_flag_len:\n",
+    "        max_flag_len = len(flag_parts)\n",
+    "\n",
+    "for lens_name, flag in set_flag_dict.items():\n",
+    "    flag_parts = flag.split(',')\n",
+    "    row = {'Lens Name': lens_name}\n",
+    "    for i, val in enumerate(flag_parts):\n",
+    "        row[f'flag{i+1}'] = val\n",
+    "    rows_flag.append(row)\n",
+    "\n",
+    "columns_flag = ['Lens Name'] + [f'flag{i+1}' for i in range(max_flag_len)]\n",
+    "df_flag = pd.DataFrame(rows_flag, columns=columns_flag)\n",
+    "df_flag\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
