added combined columns code

--- a/param_extractor.ipynb
+++ b/param_extractor.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 121,
    "id": "6cf21370",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,8 @@
      "text": [
       "Number of 'lens' lines: 2\n",
       "['lens', 'sie', '0.2613', '1.273078e+02', '2.081102e+01', '2.074403e+01', '2.920926e-01', '3.564185e+00', '0.000000e+00', '0.000000e+00']\n",
-      "['lens', 'pert', '0.2613', '1.000000e+00', '2.111219e+01', '2.069566e+01', '2.954578e-02', '1.079066e+02', '0.000000e+00', '3.547413e-01']\n"
+      "['lens', 'pert', '0.2613', '1.000000e+00', '2.111219e+01', '2.069566e+01', '2.954578e-02', '1.079066e+02', '0.000000e+00', '3.547413e-01']\n",
+      "Number of lens profiles: 2\n"
      ]
     },
     {
@@ -194,7 +195,7 @@
        " 'pert': [1.0, 21.11219, 20.69566, 0.02954578, 107.9066, 0.0, 0.3547413]}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,6 +228,11 @@
     "    for i in range(len(lens_params)):\n",
     "        lens_name, params = lens_params[i]\n",
     "        lens_params_dict[lens_name] = params[1:]\n",
+    "\n",
+    "\n",
+    "# Number of len profiles\n",
+    "num_lens_profiles = len(lens_params_dict)\n",
+    "print(f\"Number of lens profiles: {num_lens_profiles}\")\n",
     "        \n",
     "\n",
     "\n",
@@ -979,6 +985,245 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "fff44e2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Lens Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Type",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "σ",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "x",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "y",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "e",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "$θ_{e}$",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "$r_{core}$",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "NaN",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "ref": "be5c09f5-a916-40ce-9eda-fb2beb4d2bd7",
+       "rows": [
+        [
+         "0",
+         "sie",
+         "Input",
+         "130.0",
+         "20.81",
+         "20.76",
+         "0.109",
+         "23.18",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "1",
+         "sie",
+         "Output",
+         "127.3078",
+         "20.81102",
+         "20.74403",
+         "0.2920926",
+         "3.564185",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "2",
+         "sie",
+         "Flag",
+         "1",
+         "1",
+         "1",
+         "1",
+         "1",
+         "0",
+         "0"
+        ]
+       ],
+       "shape": {
+        "columns": 9,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lens Name</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>σ</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>e</th>\n",
+       "      <th>$θ_{e}$</th>\n",
+       "      <th>$r_{core}$</th>\n",
+       "      <th>NaN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sie</td>\n",
+       "      <td>Input</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>20.81</td>\n",
+       "      <td>20.76</td>\n",
+       "      <td>0.109</td>\n",
+       "      <td>23.18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sie</td>\n",
+       "      <td>Output</td>\n",
+       "      <td>127.3078</td>\n",
+       "      <td>20.81102</td>\n",
+       "      <td>20.74403</td>\n",
+       "      <td>0.292093</td>\n",
+       "      <td>3.564185</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sie</td>\n",
+       "      <td>Flag</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Lens Name    Type         σ         x         y         e   $θ_{e}$  \\\n",
+       "0       sie   Input     130.0     20.81     20.76     0.109     23.18   \n",
+       "1       sie  Output  127.3078  20.81102  20.74403  0.292093  3.564185   \n",
+       "2       sie    Flag         1         1         1         1         1   \n",
+       "\n",
+       "  $r_{core}$  NaN  \n",
+       "0        0.0  0.0  \n",
+       "1        0.0  0.0  \n",
+       "2          0    0  "
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs = []\n",
+    "for i in range(num_lens_profiles):\n",
+    "    lens_name = df['Lens Name'][i]\n",
+    "    # Find the model type (case-insensitive match)\n",
+    "    model_type = None\n",
+    "    for m in model_list:\n",
+    "        if m.lower() == lens_name.lower():\n",
+    "            model_type = m\n",
+    "            break\n",
+    "    if model_type is None:\n",
+    "        continue\n",
+    "\n",
+    "    symbols = model_params[model_type][:7]\n",
+    "    # Row 2: input\n",
+    "    row_input = pd.DataFrame([df_input.iloc[i, 1:8].values], columns=symbols)\n",
+    "    # Row 3: output\n",
+    "    row_output = pd.DataFrame([df.iloc[i, 1:8].values], columns=symbols)\n",
+    "    # Row 4: flags\n",
+    "    row_flags = pd.DataFrame([df_flag.iloc[i, 1:8].values], columns=symbols)\n",
+    "\n",
+    "    # Stack vertically, add a label column for row type\n",
+    "    lens_df = pd.concat([\n",
+    "        row_input.assign(Type='Input'),\n",
+    "        row_output.assign(Type='Output'),\n",
+    "        row_flags.assign(Type='Flag')\n",
+    "    ], ignore_index=True)\n",
+    "    lens_df.insert(0, 'Lens Name', lens_name)\n",
+    "    # Move 'Type' to the second column\n",
+    "    cols = lens_df.columns.tolist()\n",
+    "    cols.insert(1, cols.pop(cols.index('Type')))\n",
+    "    lens_df = lens_df[cols]\n",
+    "    dfs.append(lens_df)\n",
+    "\n",
+    "# Example: show for the first lens\n",
+    "dfs[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2522067",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
