--- a/param_extractor.ipynb
+++ b/param_extractor.ipynb
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "61466304",
    "metadata": {},
    "outputs": [
@@ -1395,7 +1395,7 @@
          "type": "integer"
         }
        ],
-       "ref": "118b6d34-1934-4abe-8298-57a44781e198",
+       "ref": "4d67a533-2468-4653-b975-5716c66d94e3",
        "rows": [
         [
          "0",
@@ -1533,7 +1533,7 @@
        "3  20.81981  21.25931  15.30  0.00039     0.16  0.0  0.0  0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1547,234 +1547,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "id": "6681a212",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "x",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "y",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "mag",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "pos_err",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "mag_err",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "1",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "2",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "3",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "f40f5cc6-a1b9-4c0c-8186-99aaed4189fb",
-       "rows": [
-        [
-         "0",
-         "20.7766",
-         "20.3028",
-         "-13.7822",
-         "0.563",
-         null,
-         null,
-         null,
-         null
-        ],
-        [
-         "1",
-         "20.8133",
-         "20.7672",
-         "0.01",
-         "3.443",
-         null,
-         null,
-         null,
-         null
-        ],
-        [
-         "2",
-         "21.2729",
-         "20.9559",
-         "25.9781",
-         "0.0",
-         null,
-         null,
-         null,
-         null
-        ],
-        [
-         "3",
-         "20.3914",
-         "21.0495",
-         "28.4435",
-         "0.023",
-         null,
-         null,
-         null,
-         null
-        ],
-        [
-         "4",
-         "20.8198",
-         "21.2596",
-         "-39.8688",
-         "0.084",
-         null,
-         null,
-         null,
-         null
-        ]
-       ],
-       "shape": {
-        "columns": 8,
-        "rows": 5
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>mag</th>\n",
-       "      <th>pos_err</th>\n",
-       "      <th>mag_err</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20.7766</td>\n",
-       "      <td>20.3028</td>\n",
-       "      <td>-13.7822</td>\n",
-       "      <td>0.563</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20.8133</td>\n",
-       "      <td>20.7672</td>\n",
-       "      <td>0.0100</td>\n",
-       "      <td>3.443</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>21.2729</td>\n",
-       "      <td>20.9559</td>\n",
-       "      <td>25.9781</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20.3914</td>\n",
-       "      <td>21.0495</td>\n",
-       "      <td>28.4435</td>\n",
-       "      <td>0.023</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20.8198</td>\n",
-       "      <td>21.2596</td>\n",
-       "      <td>-39.8688</td>\n",
-       "      <td>0.084</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         x        y      mag  pos_err  mag_err   1   2   3\n",
-       "0  20.7766  20.3028 -13.7822    0.563      NaN NaN NaN NaN\n",
-       "1  20.8133  20.7672   0.0100    3.443      NaN NaN NaN NaN\n",
-       "2  21.2729  20.9559  25.9781    0.000      NaN NaN NaN NaN\n",
-       "3  20.3914  21.0495  28.4435    0.023      NaN NaN NaN NaN\n",
-       "4  20.8198  21.2596 -39.8688    0.084      NaN NaN NaN NaN"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "out_point = pd.read_csv(model_path + '/' + model_ver + '_point.dat', delim_whitespace=True, header=None, skiprows=1, names=columnn_names)\n",
-    "out_point"
+    "out_point.drop(columns=['mag_err', '1', '2', '3'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "899f397b",
    "metadata": {},
    "outputs": [
@@ -1806,77 +1590,41 @@
          "name": "pos_err",
          "rawType": "float64",
          "type": "float"
-        },
-        {
-         "name": "mag_err",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "1",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "2",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "3",
-         "rawType": "float64",
-         "type": "float"
         }
        ],
-       "ref": "0ad18204-9f05-4f65-8e12-2cc145e1a720",
+       "ref": "ac5bfb07-5ed3-4fc8-9c16-719819afa6ce",
        "rows": [
         [
          "0",
          "20.7766",
          "20.3028",
          "-13.7822",
-         "0.563",
-         null,
-         null,
-         null,
-         null
+         "0.563"
         ],
         [
          "1",
          "21.2729",
          "20.9559",
          "25.9781",
-         "0.0",
-         null,
-         null,
-         null,
-         null
+         "0.0"
         ],
         [
          "2",
          "20.3914",
          "21.0495",
          "28.4435",
-         "0.023",
-         null,
-         null,
-         null,
-         null
+         "0.023"
         ],
         [
          "3",
          "20.8198",
          "21.2596",
          "-39.8688",
-         "0.084",
-         null,
-         null,
-         null,
-         null
+         "0.084"
         ]
        ],
        "shape": {
-        "columns": 8,
+        "columns": 4,
         "rows": 4
        }
       },
@@ -1903,10 +1651,6 @@
        "      <th>y</th>\n",
        "      <th>mag</th>\n",
        "      <th>pos_err</th>\n",
-       "      <th>mag_err</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1916,10 +1660,6 @@
        "      <td>20.3028</td>\n",
        "      <td>-13.7822</td>\n",
        "      <td>0.563</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1927,10 +1667,6 @@
        "      <td>20.9559</td>\n",
        "      <td>25.9781</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1938,10 +1674,6 @@
        "      <td>21.0495</td>\n",
        "      <td>28.4435</td>\n",
        "      <td>0.023</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1949,24 +1681,20 @@
        "      <td>21.2596</td>\n",
        "      <td>-39.8688</td>\n",
        "      <td>0.084</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         x        y      mag  pos_err  mag_err   1   2   3\n",
-       "0  20.7766  20.3028 -13.7822    0.563      NaN NaN NaN NaN\n",
-       "1  21.2729  20.9559  25.9781    0.000      NaN NaN NaN NaN\n",
-       "2  20.3914  21.0495  28.4435    0.023      NaN NaN NaN NaN\n",
-       "3  20.8198  21.2596 -39.8688    0.084      NaN NaN NaN NaN"
+       "         x        y      mag  pos_err\n",
+       "0  20.7766  20.3028 -13.7822    0.563\n",
+       "1  21.2729  20.9559  25.9781    0.000\n",
+       "2  20.3914  21.0495  28.4435    0.023\n",
+       "3  20.8198  21.2596 -39.8688    0.084"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1977,6 +1705,228 @@
     "out_point = out_point[mask[:len(out_point)]].reset_index(drop=True)\n",
     "\n",
     "out_point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "1e0af860",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "x",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "y",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mag",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "pos_err",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "x_diff",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "y_diff",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mag_diff",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "2c6afb9a-2673-478e-90f7-3a2ff63bd5db",
+       "rows": [
+        [
+         "0",
+         "20.7766",
+         "20.3028",
+         "-13.7822",
+         "0.563",
+         "0.0011299999999998533",
+         "0.00026000000000081513",
+         "9.5122"
+        ],
+        [
+         "1",
+         "21.2729",
+         "20.9559",
+         "25.9781",
+         "0.0",
+         "0.00018000000000029104",
+         "0.00021999999999877673",
+         "19.1781"
+        ],
+        [
+         "2",
+         "20.3914",
+         "21.0495",
+         "28.4435",
+         "0.023",
+         "0.0004899999999992133",
+         "0.0010700000000021248",
+         "22.4635"
+        ],
+        [
+         "3",
+         "20.8198",
+         "21.2596",
+         "-39.8688",
+         "0.084",
+         "9.999999999621423e-06",
+         "0.0002899999999996794",
+         "24.5688"
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 4
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>pos_err</th>\n",
+       "      <th>x_diff</th>\n",
+       "      <th>y_diff</th>\n",
+       "      <th>mag_diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20.7766</td>\n",
+       "      <td>20.3028</td>\n",
+       "      <td>-13.7822</td>\n",
+       "      <td>0.563</td>\n",
+       "      <td>0.00113</td>\n",
+       "      <td>0.00026</td>\n",
+       "      <td>9.5122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21.2729</td>\n",
+       "      <td>20.9559</td>\n",
+       "      <td>25.9781</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00018</td>\n",
+       "      <td>0.00022</td>\n",
+       "      <td>19.1781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.3914</td>\n",
+       "      <td>21.0495</td>\n",
+       "      <td>28.4435</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>0.00049</td>\n",
+       "      <td>0.00107</td>\n",
+       "      <td>22.4635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20.8198</td>\n",
+       "      <td>21.2596</td>\n",
+       "      <td>-39.8688</td>\n",
+       "      <td>0.084</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>0.00029</td>\n",
+       "      <td>24.5688</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         x        y      mag  pos_err   x_diff   y_diff  mag_diff\n",
+       "0  20.7766  20.3028 -13.7822    0.563  0.00113  0.00026    9.5122\n",
+       "1  21.2729  20.9559  25.9781    0.000  0.00018  0.00022   19.1781\n",
+       "2  20.3914  21.0495  28.4435    0.023  0.00049  0.00107   22.4635\n",
+       "3  20.8198  21.2596 -39.8688    0.084  0.00001  0.00029   24.5688"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_point['x_diff'] = abs(out_point['x'] - obs_point['x'])\n",
+    "out_point['y_diff'] = abs(out_point['y'] - obs_point['y'])\n",
+    "out_point['mag_diff'] = abs(out_point['mag']) - abs(obs_point['mag'])\n",
+    "out_point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "8ac7eb13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMS of the differences: 0.000728\n",
+      "RMS of the magnification differences: 18.930650\n"
+     ]
+    }
+   ],
+   "source": [
+    "# RMS \n",
+    "# Positions\n",
+    "pos_sum_sq = out_point['x_diff']**2 + out_point['y_diff']**2\n",
+    "pos_sq = np.sqrt(pos_sum_sq)\n",
+    "pos_rms = np.average(pos_sq)\n",
+    "print(f\"RMS of the differences: {pos_rms:.6f}\")\n",
+    "\n",
+    "# Magnifications\n",
+    "mag_sum_sq = out_point['mag_diff']**2\n",
+    "mag_sq = np.sqrt(mag_sum_sq)\n",
+    "mag_rms = np.average(mag_sq)\n",
+    "print(f\"RMS of the magnification differences: {mag_rms:.6f}\")"
    ]
   }
  ],
