added anomaly flags

--- a/param_extractor.ipynb
+++ b/param_extractor.ipynb
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "id": "8ac7eb13",
    "metadata": {},
    "outputs": [
@@ -1918,15 +1918,498 @@
     "# RMS \n",
     "# Positions\n",
     "pos_sum_sq = out_point['x_diff']**2 + out_point['y_diff']**2\n",
-    "pos_sq = np.sqrt(pos_sum_sq)\n",
+    "pos_sq = np.sqrt(pos_sum_sq) # Plotted on graph\n",
     "pos_rms = np.average(pos_sq)\n",
     "print(f\"RMS of the differences: {pos_rms:.6f}\")\n",
+    "out_point['pos_sq'] = pos_sq\n",
     "\n",
     "# Magnifications\n",
     "mag_sum_sq = out_point['mag_diff']**2\n",
     "mag_sq = np.sqrt(mag_sum_sq)\n",
     "mag_rms = np.average(mag_sq)\n",
     "print(f\"RMS of the magnification differences: {mag_rms:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "59a59d59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "x",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "y",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mag",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "pos_err",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "x_diff",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "y_diff",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mag_diff",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "pos_sq",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "pos_anomaly",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "c7aee194-38aa-49f2-8baf-a4e8f8566dc2",
+       "rows": [
+        [
+         "0",
+         "20.7766",
+         "20.3028",
+         "-13.7822",
+         "0.563",
+         "0.0011299999999998533",
+         "0.00026000000000081513",
+         "9.5122",
+         "0.0011595257651299054",
+         "Normal"
+        ],
+        [
+         "1",
+         "21.2729",
+         "20.9559",
+         "25.9781",
+         "0.0",
+         "0.00018000000000029104",
+         "0.00021999999999877673",
+         "19.1781",
+         "0.0002842534080702755",
+         "Normal"
+        ],
+        [
+         "2",
+         "20.3914",
+         "21.0495",
+         "28.4435",
+         "0.023",
+         "0.0004899999999992133",
+         "0.0010700000000021248",
+         "22.4635",
+         "0.0011768602295955863",
+         "Anomaly"
+        ],
+        [
+         "3",
+         "20.8198",
+         "21.2596",
+         "-39.8688",
+         "0.084",
+         "9.999999999621423e-06",
+         "0.0002899999999996794",
+         "24.5688",
+         "0.0002901723625706047",
+         "Normal"
+        ]
+       ],
+       "shape": {
+        "columns": 9,
+        "rows": 4
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>pos_err</th>\n",
+       "      <th>x_diff</th>\n",
+       "      <th>y_diff</th>\n",
+       "      <th>mag_diff</th>\n",
+       "      <th>pos_sq</th>\n",
+       "      <th>pos_anomaly</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20.7766</td>\n",
+       "      <td>20.3028</td>\n",
+       "      <td>-13.7822</td>\n",
+       "      <td>0.563</td>\n",
+       "      <td>0.00113</td>\n",
+       "      <td>0.00026</td>\n",
+       "      <td>9.5122</td>\n",
+       "      <td>0.001160</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21.2729</td>\n",
+       "      <td>20.9559</td>\n",
+       "      <td>25.9781</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00018</td>\n",
+       "      <td>0.00022</td>\n",
+       "      <td>19.1781</td>\n",
+       "      <td>0.000284</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.3914</td>\n",
+       "      <td>21.0495</td>\n",
+       "      <td>28.4435</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>0.00049</td>\n",
+       "      <td>0.00107</td>\n",
+       "      <td>22.4635</td>\n",
+       "      <td>0.001177</td>\n",
+       "      <td>Anomaly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20.8198</td>\n",
+       "      <td>21.2596</td>\n",
+       "      <td>-39.8688</td>\n",
+       "      <td>0.084</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>0.00029</td>\n",
+       "      <td>24.5688</td>\n",
+       "      <td>0.000290</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         x        y      mag  pos_err   x_diff   y_diff  mag_diff    pos_sq  \\\n",
+       "0  20.7766  20.3028 -13.7822    0.563  0.00113  0.00026    9.5122  0.001160   \n",
+       "1  21.2729  20.9559  25.9781    0.000  0.00018  0.00022   19.1781  0.000284   \n",
+       "2  20.3914  21.0495  28.4435    0.023  0.00049  0.00107   22.4635  0.001177   \n",
+       "3  20.8198  21.2596 -39.8688    0.084  0.00001  0.00029   24.5688  0.000290   \n",
+       "\n",
+       "  pos_anomaly  \n",
+       "0      Normal  \n",
+       "1      Normal  \n",
+       "2     Anomaly  \n",
+       "3      Normal  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Position Anomalies \n",
+    "one_sigma_pos = obs_point['pos_err'] * 1.0\n",
+    "\n",
+    "out_point['pos_anomaly'] = np.where(out_point['pos_sq'] > one_sigma_pos, 'Anomaly', 'Normal')\n",
+    "out_point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "2330a4d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "x",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "y",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mag",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "pos_err",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "x_diff",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "y_diff",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mag_diff",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "pos_sq",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "pos_anomaly",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "mag_anomaly",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "mag_sq",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "fdcf57a9-4c5f-4f4c-a9ce-61e8be38d6a4",
+       "rows": [
+        [
+         "0",
+         "20.7766",
+         "20.3028",
+         "-13.7822",
+         "0.563",
+         "0.0011299999999998533",
+         "0.00026000000000081513",
+         "9.5122",
+         "0.0011595257651299054",
+         "Normal",
+         "Anomaly",
+         "9.5122"
+        ],
+        [
+         "1",
+         "21.2729",
+         "20.9559",
+         "25.9781",
+         "0.0",
+         "0.00018000000000029104",
+         "0.00021999999999877673",
+         "19.1781",
+         "0.0002842534080702755",
+         "Normal",
+         "Anomaly",
+         "19.1781"
+        ],
+        [
+         "2",
+         "20.3914",
+         "21.0495",
+         "28.4435",
+         "0.023",
+         "0.0004899999999992133",
+         "0.0010700000000021248",
+         "22.4635",
+         "0.0011768602295955863",
+         "Anomaly",
+         "Anomaly",
+         "22.4635"
+        ],
+        [
+         "3",
+         "20.8198",
+         "21.2596",
+         "-39.8688",
+         "0.084",
+         "9.999999999621423e-06",
+         "0.0002899999999996794",
+         "24.5688",
+         "0.0002901723625706047",
+         "Normal",
+         "Anomaly",
+         "24.5688"
+        ]
+       ],
+       "shape": {
+        "columns": 11,
+        "rows": 4
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>pos_err</th>\n",
+       "      <th>x_diff</th>\n",
+       "      <th>y_diff</th>\n",
+       "      <th>mag_diff</th>\n",
+       "      <th>pos_sq</th>\n",
+       "      <th>pos_anomaly</th>\n",
+       "      <th>mag_anomaly</th>\n",
+       "      <th>mag_sq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20.7766</td>\n",
+       "      <td>20.3028</td>\n",
+       "      <td>-13.7822</td>\n",
+       "      <td>0.563</td>\n",
+       "      <td>0.00113</td>\n",
+       "      <td>0.00026</td>\n",
+       "      <td>9.5122</td>\n",
+       "      <td>0.001160</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Anomaly</td>\n",
+       "      <td>9.5122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21.2729</td>\n",
+       "      <td>20.9559</td>\n",
+       "      <td>25.9781</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00018</td>\n",
+       "      <td>0.00022</td>\n",
+       "      <td>19.1781</td>\n",
+       "      <td>0.000284</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Anomaly</td>\n",
+       "      <td>19.1781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.3914</td>\n",
+       "      <td>21.0495</td>\n",
+       "      <td>28.4435</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>0.00049</td>\n",
+       "      <td>0.00107</td>\n",
+       "      <td>22.4635</td>\n",
+       "      <td>0.001177</td>\n",
+       "      <td>Anomaly</td>\n",
+       "      <td>Anomaly</td>\n",
+       "      <td>22.4635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20.8198</td>\n",
+       "      <td>21.2596</td>\n",
+       "      <td>-39.8688</td>\n",
+       "      <td>0.084</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>0.00029</td>\n",
+       "      <td>24.5688</td>\n",
+       "      <td>0.000290</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Anomaly</td>\n",
+       "      <td>24.5688</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         x        y      mag  pos_err   x_diff   y_diff  mag_diff    pos_sq  \\\n",
+       "0  20.7766  20.3028 -13.7822    0.563  0.00113  0.00026    9.5122  0.001160   \n",
+       "1  21.2729  20.9559  25.9781    0.000  0.00018  0.00022   19.1781  0.000284   \n",
+       "2  20.3914  21.0495  28.4435    0.023  0.00049  0.00107   22.4635  0.001177   \n",
+       "3  20.8198  21.2596 -39.8688    0.084  0.00001  0.00029   24.5688  0.000290   \n",
+       "\n",
+       "  pos_anomaly mag_anomaly   mag_sq  \n",
+       "0      Normal     Anomaly   9.5122  \n",
+       "1      Normal     Anomaly  19.1781  \n",
+       "2     Anomaly     Anomaly  22.4635  \n",
+       "3      Normal     Anomaly  24.5688  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Magnification Anomalies\n",
+    "one_sigma_mag = obs_point['mag_err'] * 1.0\n",
+    "\n",
+    "out_point['mag_anomaly'] = np.where(out_point['mag_diff'] > one_sigma_mag, 'Anomaly', 'Normal')\n",
+    "out_point"
    ]
   }
  ],
